# Capturing-Reality-Exercise-1

./: CMakeLists.txt  README.md  example.cc  image.cc  image.h
doc/: image.md
exercise/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cc  ply.cc  ply.h
exercise/cmake/: FindCeres.cmake  FindEigen3.cmake
exercise/exercise/: Makefile  ex
exercise/image/: Makefile
image/: CMakeLists.txt
image/include/: image.h
image/src/: image_io.cc  image_manip.cc
include/: image.h
python/: depthToPointCloud.ipynb  hello_world.ipynb  intrinsic_template.xml  point_cloud.ipynb  test.xml
python/achteck-new2-part1/: aabb.txt  view_0000-cam.txt  view_0001-cam.txt  view_0002-cam.txt  view_0003-cam.txt  view_0004-cam.txt  view_0005-cam.txt  view_0006-cam.txt  view_0007-cam.txt  view_0008-cam.txt  view_0009-cam.txt  view_0010-cam.txt  view_0011-cam.txt  view_0012-cam.txt  view_0013-cam.txt  view_0014-cam.txt
python/achteck-new2-part2/: view_0015-cam.txt  view_0016-cam.txt  view_0017-cam.txt  view_0020-cam.txt  view_0021-cam.txt  view_0022-cam.txt  view_0023-cam.txt  view_0024-cam.txt  view_0025-cam.txt  view_0027-cam.txt  view_0028-cam.txt  view_0029-cam.txt  view_0031-cam.txt  view_0032-cam.txt  view_0033-cam.txt
src/: image_io.cc
